Fix missing gap. Fix row twitch when uncollapsing hidden rows.

--- a/src/app/shared/components/ascents/ascents.component.scss
+++ b/src/app/shared/components/ascents/ascents.component.scss
@@ -13,15 +13,16 @@
     td {
       padding: 0;
 
-      &.w-border {
+      transition: all 2250ms cubic-bezier(0.4, 0, 0.2, 1);
+      &.w-border,
+      &.fake-border {
         border-top: 0px solid white;
-        transition: all 225ms cubic-bezier(0.4, 0, 0.2, 1);
       }
 
       div {
         height: 0;
         opacity: 0;
-        transition: height 225ms cubic-bezier(0.4, 0, 0.2, 1),
+        transition: height 2250ms cubic-bezier(0.4, 0, 0.2, 1),
           opacity 225ms cubic-bezier(0.4, 0, 0.2, 1);
 
         overflow: hidden;
@@ -37,6 +38,9 @@
   .row.expanded-row td {
     &.w-border {
       border-top: 1px solid $gray-lighter;
+    }
+    &.fake-border {
+      border-top: 1px solid white;
     }
     div {
       height: 52px;
